# RAG-LangChain

./: .env.example  .gitignore  2_simple-generate.py  3_basic-conversation  3_basic-conversation.py  5_persistent-conversation.py  README.md  main.py  pyproject.toml
1_chat-model/: 2_simple-generate.py  4_realtime-conversation.py
2_prompt-templates/: 1_basic.py  2_with-chat-model.py
3_chain/: 1_basic.py  2_chain-under-the-hood.py  3_chain-extended.py  4_chain-parallel.py  5_branching.py
4_rag/: 1_ingest.py  1_ingestion_doc  2_query.py  2_query_doc
